# DashEngine

./: .gitignore  CMakeLists.txt  README.md
DashEngine/: BufferTexture.cpp  BufferTexture.h  Camera.cpp  Camera.h  Component.cpp  Component.h  ComponentEditor.cpp  ComponentEditor.h  DashEngine.vcxproj  DashEngine.vcxproj.filters  DashEngineConfig.h  DirectionalLight.h  Editor.cpp  Editor.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Entity.inl  FileTexture.cpp  FileTexture.h  FrameBuffer.cpp  FrameBuffer.h  Hierarchy.cpp  Hierarchy.h  Inputs.cpp  Inputs.h  Inspector.cpp  Inspector.h  Light.h  LightsManager.cpp  LightsManager.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h  MeshRenderer.cpp  MeshRenderer.h  MeshRendererEditor.cpp  MeshRendererEditor.h  (+36 more)
DashEngine/Resources/Shaders/: fragment.frag  spritevertex.vert  vertex.vert
DashEngine/x64/Debug/: vc143.idb
DashEngine/x64/Debug/DashEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Dependencies/: CMakeLists.txt
Dependencies/Assimp/lib/: assimp-vc143-mt.lib
Dependencies/Glad/: glad.c
Dependencies/Glad/include/glad/: glad.h
Game/: Game.vcxproj  Game.vcxproj.filters  imgui.ini  main.cpp  move.cpp  move.h  myScene.cpp  myScene.h  print.cpp  print.h
Game/Resources/Shaders/: fragment.frag  spritefragment.frag  spritevertex.vert  vertex.vert
Game/x64/Debug/: Game.exe.recipe  Game.ilk  vc143.idb
Game/x64/Debug/Game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
